manifests2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-deploy2
  namespace: canary-test
  labels:
    app: deploy2
spec:
  selector:
    app: deploy2
  ports:
    - protocol: TCP
      port: 80     # Service port
      targetPort: 80 # Pod's containerPort
  type: ClusterIP
